--- a/hw02/KNN.ipynb
+++ b/hw02/KNN.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,6 +63,13 @@
     "        изучите работу sklearn.neighbors.NearestNeighbors'''\n",
     "        \n",
     "        # получим здесь расстояния до соседей distances и их метки\n",
+    "        n = X.shape[0]\n",
+    "        res = self.NearestNeighbors.kneighbors(X)\n",
+    "        distances = res[0]\n",
+    "        inds = res[1]\n",
+    "        labels = []\n",
+    "        for ind in inds:\n",
+    "            labels.append(self.y[ind])\n",
     "        \n",
     "        if self.weights == 'uniform':\n",
     "            w = np.ones(distances.shape)\n",
@@ -76,6 +83,18 @@
     "        # суммарный вес голосующих за него объектов\n",
     "        # затем нормируем эти веса на их сумму\n",
     "        # и вернем это как предсказание KNN\n",
+    "        ylabs_unique = np.unique(self.y)\n",
+    "        probs = []\n",
+    "        for i in range(n):\n",
+    "            objlabs = labels[i]\n",
+    "            objws = w[i]\n",
+    "            total_weight = np.sum(objws)\n",
+    "            objprobs = np.zeros(self.n_classes)\n",
+    "            for class_index in range(self.n_classes):\n",
+    "                class_label = ylabs_unique[class_index]\n",
+    "                class_inds = np.where(objlabs == class_label)[0]\n",
+    "                objprobs[class_label] = np.sum(objws[class_inds])/total_weight\n",
+    "            probs.append(objprobs)   \n",
     "        return probs"
    ]
   },
@@ -88,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,20 +130,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 56  68  70  72  77  83 106 110 119 123 127 133 134 138 146]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "inds = np.arange(len(prediction))[prediction.max(1) != 1]\n",
-    "print(inds)\n",
+    "#inds = np.arange(len(prediction))[prediction.max(1) != 1]\n",
+    "inds = np.where(np.max(prediction, axis = 1) != 1)[0]\n",
     "\n",
     "# [ 56  68  70  72  77  83 106 110 119 123 127 133 134 138 146]"
    ]
@@ -138,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -183,9 +194,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.00\n",
+      "0.99\n",
+      "1.00\n"
+     ]
+    }
+   ],
    "source": [
     "for i in 56, 83, 127:\n",
     "    print('{:.2f}'.format(max(prediction[i])))"
