--- a/hw02/NumpyScipy.ipynb
+++ b/hw02/NumpyScipy.ipynb
@@ -2,242 +2,441 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import scipy"
+    "import scipy\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Задача 1\n",
+    " ### Задача 1\n",
     "\n",
-    "Дан массив $arr$, требуется для каждой позиции $i$ найти номер элемента $arr_i$ в массиве $arr$, отсортированном по убыванию. Все значения массива $arr$ различны."
+    " Дан массив $arr$, требуется для каждой позиции $i$\n",
+    " найти номер элемента $arr_i$ в массиве $arr$, отсортированном\n",
+    " по убыванию. Все значения массива $arr$ различны."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def function_1(arr):\n",
-    "    return #TODO"
+    "    return np.argsort(np.argsort(-np.array(arr)))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 1, 0])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "(function_1([1, 2, 3]) == [2, 1, 0]).all()"
+    "function_1([1, 2, 3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "(function_1([-2, 1, 0]) == [2, 0, 1]).all()"
+    "(function_1([1, 2, 3]) == [2, 1, 0]).all()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "(function_1([-2, 1, 0, -1]) == [3, 0, 1, 2]).all()"
+    "(function_1([-2, 1, 0]) == [2, 0, 1]).all()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(function_1([-2, 1, 0, -1]) == [3, 0, 1, 2]).all()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Значение для формы**"
+    " **Значение для формы**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1875808\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(42)\n",
     "arr = function_1(np.random.uniform(size=1000000))\n",
-    "print(arr[7] + arr[42] + arr[445677] + arr[53422])"
+    "print(arr[7] + arr[42] + arr[445677] + arr[53422])\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Задача 2\n",
+    " ### Задача 2\n",
     "\n",
-    "Дана матрица $X$, нужно найти след матрицы $X X^T$"
+    " Дана матрица $X$, нужно найти след матрицы $X X^T$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def function_2(matrix):\n",
-    "    return #TODO"
+    "def function_2(X):\n",
+    "    n = X.shape[0]\n",
+    "    res = 0\n",
+    "    for i in range(n):\n",
+    "        res += np.dot(X[i, :], X[i, :])\n",
+    "    return res\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "function_2(np.array([\n",
     "    [1, 2],\n",
     "    [3, 4]\n",
-    "])) == 30"
+    "])) == 30\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "function_2(np.array([\n",
     "    [1, 0],\n",
     "    [0, 1]\n",
-    "])) == 2"
+    "])) == 2\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "function_2(np.array([\n",
     "    [2, 0],\n",
     "    [0, 2]\n",
-    "])) == 8"
+    "])) == 8\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "function_2(np.array([\n",
     "    [2, 1, 1],\n",
     "    [1, 2, 1]\n",
-    "])) == 12"
+    "])) == 12\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Значение для формы**"
+    " **Значение для формы**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "np.random.seed(42)\n",
     "arr1 = np.random.uniform(size=(1, 100000))\n",
-    "arr2 = np.random.uniform(size=(100000, 1))\n",
-    "print(int(function_2(arr1) + function_2(arr2)))"
+    "arr2 = np.random.uniform(size=(100000, 1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66730\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(int(function_2(arr1) + function_2(arr2)))\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Задача 3\n",
+    " ### Задача 3\n",
     "\n",
-    "Дан набор точек с координатам точек points_x и points_y. Нужно найти такую точку $p$ с нулевой координатой $y$ (то есть с координатами вида $(x, 0)$), что расстояние от неё до самой удалённой точки из исходного набора (растояние евклидово) минимально"
+    " Дан набор точек с координатам точек points_x и points_y.\n",
+    " Нужно найти такую точку $p$ с нулевой координатой $y$\n",
+    " (то есть с координатами вида $(x, 0)$), что расстояние от неё\n",
+    " до самой удалённой точки из исходного набора (растояние евклидово)\n",
+    " минимально"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def function_3(points_x, points_y):\n",
-    "    return #TODO"
+    "from scipy.optimize import minimize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.abs(function_3([0, 2], [1, 1]) - 1.) < 1e-3"
+    "def function_3(xlst, ylst):\n",
+    "    xarr = np.array(xlst)\n",
+    "    yarr = np.array(ylst)\n",
+    "    g = lambda x : np.max((xarr - x)**2 + yarr**2)\n",
+    "    xopt = minimize(g, 0).x[0]\n",
+    "    return xopt\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "np.abs(function_3([0, 2, 4], [1, 1, 1]) - 2.) < 1e-3"
+    "np.abs(function_3([0, 2], [1, 1]) - 1.) < 1e-3\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "np.abs(function_3([0, 4, 4], [1, 1, 1]) - 2.) < 1e-3"
+    "np.abs(function_3([0, 2, 4], [1, 1, 1]) - 2.) < 1e-3\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.abs(function_3([0, 4, 4], [1, 1, 1]) - 2.) < 1e-3\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Значение для формы**"
+    " **Значение для формы**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2181\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(42)\n",
     "arr1 = np.random.uniform(-56, 100, size=100000)\n",
     "arr2 = np.random.uniform(-100, 100, size=100000)\n",
-    "print(int(round((function_3(arr1, arr2) * 100))))"
+    "print(int(round((function_3(arr1, arr2) * 100))))\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "file_extension": ".py",
   "kernelspec": {
-   "display_name": "dmia",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "dmia"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -249,8 +448,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
-  }
+   "version": "3.6.5"
+  },
+  "mimetype": "text/x-python",
+  "name": "python",
+  "npconvert_exporter": "python",
+  "pygments_lexer": "ipython3",
+  "version": 3
  },
  "nbformat": 4,
  "nbformat_minor": 2
