--- a/hw02/NaiveBayes.ipynb
+++ b/hw02/NaiveBayes.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        "((5000, 1), (5000,), ['bernoulli'])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,20 +132,23 @@
     "    def _find_expon_params(self, x):\n",
     "        # нужно определить параметры распределения\n",
     "        # и вернуть их\n",
-    "        pass\n",
+    "        return dict(scale = np.mean(x))\n",
     "    \n",
     "    def _get_expon_density(self, x, params):\n",
     "        # нужно вернуть плотность распределения в x\n",
-    "        pass\n",
+    "        return scipy.stats.expon.pdf(x, **params)\n",
     "\n",
     "    def _find_norm_params(self, x):\n",
     "        # нужно определить параметры распределения\n",
     "        # и вернуть их\n",
-    "        pass\n",
+    "        nu = np.mean(x)\n",
+    "        sigma = np.sqrt(np.sum((x - nu)**2)/(len(x) - 1))\n",
+    "        return dict(loc = nu, scale = sigma)\n",
+    "         \n",
     "    \n",
     "    def _get_norm_density(self, x, params):\n",
     "        # нужно вернуть плотность распределения в x\n",
-    "        pass\n",
+    "        return scipy.stats.norm.pdf(x, **params)\n",
     "\n",
     "    def _get_params(self, x, distribution):\n",
     "        '''\n",
@@ -175,6 +178,15 @@
     "            return self._get_norm_density(x, params)\n",
     "        else:\n",
     "            raise NotImplementedError('Unknown distribution')\n",
+    "    \n",
+    "    def logpdf(self, x, distribution, params):\n",
+    "        '''\n",
+    "        x - значения,\n",
+    "        distribution - название распределения в scipy.stats,\n",
+    "        params - параметры распределения\n",
+    "        '''\n",
+    "        return np.log(self._get_probability_or_density(x, distribution, params))\n",
+    "\n",
     "\n",
     "    def fit(self, X, y, distrubution_names):\n",
     "        '''\n",
@@ -186,13 +198,13 @@
     "        assert X.shape[1] == len(distrubution_names)\n",
     "        assert set(y) == {0, 1}\n",
     "        self.n_classes = len(np.unique(y))\n",
-    "        self.distrubution_names = distrubution_names\n",
+    "        self.distribution_names = distrubution_names\n",
     "        \n",
     "        self.y_prior = [(y == j).mean() for j in range(self.n_classes)]\n",
     "        \n",
     "        self.distributions_params = defaultdict(dict)\n",
     "        for i in range(X.shape[1]):\n",
-    "            distribution = self.distrubution_names[i]\n",
+    "            distribution = self.distribution_names[i]\n",
     "            for j in range(self.n_classes):\n",
     "                values = X[y == j, i]\n",
     "                self.distributions_params[j][i] = \\\n",
@@ -204,7 +216,7 @@
     "        '''\n",
     "        X - тестовая выборка\n",
     "        '''\n",
-    "        assert X.shape[1] == len(self.distrubution_names)\n",
+    "        assert X.shape[1] == len(self.distribution_names)\n",
     "        \n",
     "        # нужно реализовать подсчет аргмаксной формулы, по которой \n",
     "        # наивный байес принимает решение о принадлежности объекта классу\n",
@@ -214,8 +226,41 @@
     "        # её логарифмирование, то есть, через сумму логарифмов вероятностей, \n",
     "        # поскольку перемножение достаточно малых вероятностей будет вести\n",
     "        # к вычислительным неточностям\n",
+    "        p = X.shape[1]\n",
+    "        n = X.shape[0]\n",
+    "        yhat = np.zeros(n)\n",
+    "        for i in range(n):\n",
+    "            obj = X[i, :]\n",
+    "            n_classes = len(self.y_prior)\n",
+    "            obj_evidence = np.zeros(n_classes)\n",
+    "            for j in range(n_classes):\n",
+    "                for col in range(p):\n",
+    "                    col_evidence = self.logpdf(obj[col], self.distribution_names[col], self.distributions_params[j][col])\n",
+    "                    obj_evidence[j] += col_evidence\n",
+    "            obj_posterior = self.y_prior + obj_evidence\n",
+    "            yhat[i] = np.argmax(obj_posterior)\n",
     "        \n",
-    "        return preds"
+    "        return yhat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 1, ..., 1, 1, 1])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
    ]
   },
   {
@@ -227,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +281,7 @@
        "defaultdict(dict, {0: {0: {'p': 0.1128}}, 1: {0: {'p': 0.482}}})"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +309,7 @@
     "\n",
     "prediction = nb.predict(X)\n",
     "score = f1_score(y, prediction)\n",
-    "print('{:.2f}'.format(score))"
+    "print('{:.4f}'.format(score))"
    ]
   },
   {
@@ -283,9 +328,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.76\n",
+      "0.75\n",
+      "0.79\n"
+     ]
+    }
+   ],
    "source": [
     "scipy.stats.bernoulli.name\n",
     "\n",
@@ -301,6 +356,32 @@
     "    prediction = nb.predict(X)\n",
     "    score = f1_score(y, prediction)\n",
     "    print('{:.2f}'.format(score))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(dict,\n",
+       "            {0: {0: {'p': 0.1128},\n",
+       "              1: {'scale': 0.9852643613643737},\n",
+       "              2: {'loc': -0.031953073806878646, 'scale': 0.9863563092080669}},\n",
+       "             1: {0: {'p': 0.482},\n",
+       "              1: {'scale': 0.2960380256457503},\n",
+       "              2: {'loc': 0.9528354019954841, 'scale': 2.004431227970583}}})"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nb.distributions_params"
    ]
   },
   {
